# jellyfih

./: .gitignore  CLAUDE.md  INSTALLATION.md  PROBLEMS.md  README.md  WEB_VIEWER_SUMMARY.md  deploy.sh  evolve.py  fluid_test.py  fluid_validation.py  main.py  make_comparison.py  make_jelly.py  mpm_sim.py  orchestrator.py  payload_sink.py  pyproject.toml  run_experiments.sh  run_population.py  setup_cloud.sh  setup_vastai.sh  sync_results.sh  tune_actuation.py
deploy/: bootstrap.sh
docs/: DESIGN_CRITIQUE.md  FRONTEND_SPEC.md
experiments/: EXPERIMENT_3.md  EXPERIMENT_4.md  EXPERIMENT_5.md  EXPERIMENT_6.md  INDEX.md
helpers/: fluid_analysis.py  payload_sink.py  tall_tank.py  view_generation.py  view_random.py  view_single.py
jellys/: .main.py.swp  __init__.py  config.py  jellyfish.py  main.py  rendering.py  simulation.py
storage/: EXPERIMENT_LOG.md  cloud_gpu_branch.md
web/: DESIGN.md  QUICKSTART.md  README.md  STATUS.md  app.py  check_deps.py  install.sh  run.sh  test_api.py
web/static/: app.js  style.css
web/templates/: index.html
