[project]
name = "jellys"
version = "0.1.0"
description = "2D differentiable MPM simulation for jellyfish-inspired soft robot co-design"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "taichi>=1.7.0; platform_machine == 'x86_64'",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "pillow>=10.0.0",
    "imageio[ffmpeg]>=2.37.2",
    "opencv-python>=4.13.0.92",
    "matplotlib>=3.10.8",
    "cma>=4.0.0",
]

[project.scripts]
jellys = "jellys.main:main"

[tool.uv]
package = true

[tool.setuptools.packages.find]
include = ["jellys*"]  # Only look for the jellys package
exclude = ["output*"]   # Explicitly ignore your simulation results
