[project]
name = "jellys"
version = "0.1.0"
description = "2D differentiable MPM simulation for jellyfish-inspired soft robot co-design"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "pillow>=10.0.0",
    "matplotlib>=3.10.8",
    "flask>=3.0.0",
]

[project.optional-dependencies]
simulation = [
    "taichi>=1.7.0",
    "imageio[ffmpeg]>=2.37.2",
    "opencv-python>=4.13.0.92",
    "cma>=4.0.0",
]
all = [
    "taichi>=1.7.0",
    "imageio[ffmpeg]>=2.37.2",
    "opencv-python>=4.13.0.92",
    "cma>=4.0.0",
]

[project.scripts]
jellys = "jellys.main:main"

[tool.uv]
package = true

[tool.setuptools.packages.find]
include = ["jellys*"]  # Only look for the jellys package
exclude = ["output*"]   # Explicitly ignore your simulation results
